(library
 (name dohickey_unix)

 (libraries yojson dream sqlite3 cmdliner dohickey mustache)

 (preprocess
  (pps ppx_blob lwt_ppx))

 (preprocessor_deps
  (file ../public/index.html)
  (file ../public/sign-in.html)
  (file ../public/table.html)
  (file ../public/main.css)
  (file ../../static/js_client.js)
  (file ../../static/js_service_worker.js)))
